--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -14,14 +14,14 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="'[home]'">Home</a>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" [routerLink]="'home'">Home</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="'[technologies]'">Technologies</a>
+        <a class="nav-link" [routerLink]="'technologies'">Technologies</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="'[about]'">About</a>
+        <a class="nav-link" [routerLink]="'about'">About</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
