Add technologies view

--- a/frontend/src/app/pages/tecnhologies/tecnhologies.component.html
+++ b/frontend/src/app/pages/tecnhologies/tecnhologies.component.html
@@ -1,1 +1,9 @@
-<p>tecnhologies works!</p>
+<h1>Technologies <small>Backend and Frontend</small></h1>
+<hr />
+
+<div class="card-columns">
+  <app-technology-card
+    [technology]="technology"
+    *ngFor="let technology of technologies"
+  ></app-technology-card>
+</div>
