--- a/frontend/src/app/pages/search/search.component.html
+++ b/frontend/src/app/pages/search/search.component.html
@@ -1,1 +1,19 @@
-<p>search works!</p>
+<h1>
+  Searching: <small>{{ query }}</small>
+</h1>
+
+<div class="row" *ngIf="technologies.length == 0">
+  <div class="col-md-12">
+    <div class="alert alert-info" role="alert">
+      There is not technologies with this pattern: {{ query }}
+    </div>
+  </div>
+</div>
+
+<div class="card-columns">
+  <app-technology-card
+    [technology]="technology"
+    *ngFor="let technology of technologies"
+  >
+  </app-technology-card>
+</div>
